fix: fix css property overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,8 @@
 /*!!!!*/
 .slider-section__test-wrapper {
     position: relative;
-    width: 100%
+    width: 100%;
+    overflow: hidden;
 }
 
 .slider-section__slider-item {
